--- a/data/config.json
+++ b/data/config.json
@@ -8,7 +8,7 @@
         "tagline": "Minimal and clean blog theme",
         "logo_img": "images/logo.svg",
         "logo_img_alt": "Fjord Logo",
-        "background_img": "images/header-bg.jpg",
+        "background_img": "/images/front.jpg",
         "has_nav": true,
         "nav_links": [
             {
