--- a/data/config.json
+++ b/data/config.json
@@ -95,5 +95,5 @@
         "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=fjord&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
     "domain": "https://ship-wreck-7bc9d.netlify.app",
-    "favicon": "/images/Picture3.png"
+    "favicon": "/images/panoramic-aluminum.png"
 }
