--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -111,7 +111,7 @@ models:
         label: Title
         description: Site title
         required: true
-      - type: string
+      - type: markdown
         name: title
         label: Title
         description: Site title
