config.json: changed

--- a/data/config.json
+++ b/data/config.json
@@ -113,5 +113,5 @@
         "links": []
     },
     "domain": "https://ship-wreck-7bc9d.netlify.app",
-    "favicon": "/images/panoramic-aluminum.png",
+    "favicon": "/images/panoramic-aluminum.png"
 }
