--- a/data/config.json
+++ b/data/config.json
@@ -16,40 +16,28 @@
                 "template": "action",
                 "label": "Home",
                 "url": "/",
-                "style": "link",
-                "icon_class": "",
-                "new_window": false,
-                "no_follow": false
+                "style": "link"
             },
             {
                 "type": "action",
                 "template": "action",
                 "label": "About",
                 "url": "/about",
-                "style": "link",
-                "icon_class": "",
-                "new_window": false,
-                "no_follow": false
+                "style": "link"
             },
             {
                 "type": "action",
                 "template": "action",
                 "label": "Style Guide",
                 "url": "/style-guide",
-                "style": "link",
-                "icon_class": "",
-                "new_window": false,
-                "no_follow": false
+                "style": "link"
             },
             {
                 "type": "action",
                 "template": "action",
                 "label": "Contact",
                 "url": "/contact",
-                "style": "link",
-                "icon_class": "",
-                "new_window": false,
-                "no_follow": false
+                "style": "link"
             }
         ],
         "has_social": true,
@@ -61,8 +49,7 @@
                 "url": "https://twitter.com/",
                 "style": "icon",
                 "icon_class": "twitter",
-                "new_window": true,
-                "no_follow": false
+                "new_window": true
             },
             {
                 "type": "action",
@@ -71,8 +58,7 @@
                 "url": "https://www.instagram.com/",
                 "style": "icon",
                 "icon_class": "instagram",
-                "new_window": true,
-                "no_follow": false
+                "new_window": true
             },
             {
                 "type": "action",
@@ -81,8 +67,7 @@
                 "url": "https://github.com/",
                 "style": "icon",
                 "icon_class": "github",
-                "new_window": true,
-                "no_follow": false
+                "new_window": true
             },
             {
                 "type": "action",
@@ -91,8 +76,7 @@
                 "url": "https://www.linkedin.com/",
                 "style": "icon",
                 "icon_class": "linkedin",
-                "new_window": true,
-                "no_follow": false
+                "new_window": true
             },
             {
                 "type": "action",
@@ -101,16 +85,14 @@
                 "url": "https://dev.to/",
                 "style": "icon",
                 "icon_class": "dev",
-                "new_window": true,
-                "no_follow": false
+                "new_window": true
             }
         ]
     },
     "footer": {
         "type": "footer",
         "template": "footer",
-        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=fjord&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>",
-        "links": []
+        "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=fjord&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
     "domain": "https://ship-wreck-7bc9d.netlify.app",
     "favicon": "/images/panoramic-aluminum.png"
