stackbit.yaml: changed

--- a/stackbit.yaml
+++ b/stackbit.yaml
@@ -143,6 +143,7 @@ models:
         label: Footer Configuration
         models:
           - footer
+    file: config.json
   header:
     type: object
     label: Header Configuration
